--- a/frontend/app/src/App.css
+++ b/frontend/app/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #282c34;
+  color: white;
+}
 .App {
   text-align: center;
 }
@@ -14,7 +18,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +38,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+a:link,
+:visited {
+  color: white;
+}
+
+header {
+  background-color: #4e0dff;
+  color: #fff;
+  padding: 10px 0;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+nav li {
+  margin-right: 20px;
+}
+nav a {
+  text-decoration: none;
+  color: #fff;
 }
