Finished all the routes of the frontend, now improve upon

--- a/backend/project/app/templates/email_verification.html
+++ b/backend/project/app/templates/email_verification.html
@@ -1,5 +1,5 @@
 <h1>
-    WEBAPPLICATION
+    MIJNBONNETJE.NL
 </h1>
 <h2>Verify your email address</h2>
 <p>Hello user, verify your email address by clicking on the following link:</p>
